Releasing 0.9.7 BETA
git-svn-id: https://all-inhonmodman.svn.sourceforge.net/svnroot/all-inhonmodman@276 d47efa83-66cc-45f4-b299-ae05fc431935